# santorin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
src/evaluators/: base_evaluator.py  evaluator.py
src/loaders/: base_loader.py  csv_loader.py  json_loader.py
src/orchestrator/: orchestrator.py  pipeline.py
src/processors/: base_processor.py
src/translators/: base_translator.py  translator.py
