[project]
name = "santorin"
version = "0.1.0"
description = "Projet ML généré avec Cookiecutter"
authors = [
    { name = "lara" }
]
requires-python = ">= 3.10"
readme = "README.md"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]